<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="partyhelper.com.xpoliem.myapplication.RegisterFragment">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.xpoliem.party_helper.RegisterActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textViewRegister"
            android:id="@+id/textError"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
      />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edtTxtUsername"
            android:layout_below="@+id/textError"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/edtUsername"
            android:linksClickable="false"
            android:longClickable="false"
            android:nestedScrollingEnabled="false"

            android:backgroundTintMode="add" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edtEmail"
            android:layout_below="@+id/edtTxtUsername"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/edtEmail"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edtTxtPass1"
            android:layout_below="@+id/edtEmail"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edtTxtPass2"
            android:layout_below="@+id/edtTxtPass1"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textViewPass1"
            android:id="@+id/textView6"
            android:layout_below="@+id/edtEmail"
            android:layout_toLeftOf="@+id/edtTxtPass1"
            android:layout_toStartOf="@+id/edtTxtPass1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textviewConfirm"
            android:id="@+id/textView7"
            android:layout_alignBottom="@+id/edtTxtPass2"
            android:layout_toLeftOf="@+id/edtTxtPass2"
            android:layout_toStartOf="@+id/edtTxtPass2" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="right|center_vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <RadioGroup
                android:id="@+id/radioSex"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">
                <RadioButton
                    android:layout_width="135dp"
                    android:layout_height="35dp"
                    android:text="@string/radfemale"
                    android:id="@+id/radBtnFemale"
                    android:checked="false"
                    android:layout_centerVertical="true"
                    android:layout_alignLeft="@+id/button"
                    android:layout_alignStart="@+id/button"
                    android:textColor="#ffb300ff" />

                <RadioButton
                    android:layout_width="135dp"
                    android:layout_height="30dp"
                    android:text="@string/radMale"
                    android:id="@+id/radBtnMale"
                    android:checked="false"
                    android:layout_below="@+id/radBtnFemale"
                    android:layout_alignLeft="@+id/edtTxtPass2"
                    android:layout_alignStart="@+id/edtTxtPass2"
                    android:textColor="#ffb300ff" />

            </RadioGroup>

            <Button
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:text="@string/textViewRegister"
                android:id="@+id/btnRegister"
                android:onClick="onClick"
                android:layout_marginTop="44dp"
                android:layout_below="@+id/radioSex"
                android:layout_centerHorizontal="true"
                style="@style/Buttons"
                />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/imageView5"
                android:src="@drawable/konnect"
                android:layout_below="@+id/btnRegister"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/konnectString"
                android:id="@+id/textView14"
                android:textSize="17dp"
                android:textColor="#fa0084f8"
                android:layout_below="@+id/btnRegister"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>


    </RelativeLayout>


</FrameLayout>
