<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="partyhelper.com.xpoliem.myapplication.ChangePasswordFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.xpoliem.party_helper.ChangePassword"
        android:layout_gravity="center_horizontal|bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ChangePasswordTextview"
            android:id="@+id/textError"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edtTxtOldPass"
            android:layout_below="@+id/textError"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="79dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/oldPassTextView"
            android:id="@+id/textView3"
            android:layout_alignTop="@+id/edtTxtOldPass"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/edtTxtOldPass"
            android:layout_toStartOf="@+id/edtTxtOldPass"
            android:layout_above="@+id/edtTxtNewPass1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edtTxtNewPass1"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/edtTxtOldPass"
            android:layout_alignStart="@+id/edtTxtOldPass" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edtTxtNewPass2"
            android:layout_below="@+id/edtTxtNewPass1"
            android:layout_alignLeft="@+id/edtTxtNewPass1"
            android:layout_alignStart="@+id/edtTxtNewPass1"
            android:layout_marginTop="72dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/newpassTextView"
            android:id="@+id/textView4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:layout_toStartOf="@+id/textError"
            android:layout_alignRight="@+id/textView5"
            android:layout_alignEnd="@+id/textView5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/confirmTextView"
            android:id="@+id/textView5"
            android:layout_alignTop="@+id/edtTxtNewPass2"
            android:layout_toLeftOf="@+id/edtTxtNewPass2"
            android:layout_toStartOf="@+id/edtTxtNewPass2" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ChangepasswordBtn"
            android:id="@+id/btnChange"
            android:onClick="onClick"
            android:layout_below="@+id/edtTxtNewPass2"
            style="@style/Buttons"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageView3"
            android:src="@drawable/konnect"
            android:layout_below="@+id/textError"
            android:layout_toStartOf="@+id/textView10"
            android:layout_toLeftOf="@+id/textView10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/konnectString"
            android:id="@+id/textView10"
            android:textSize="18dp"
            android:textColor="#fa0084f8"
            android:layout_alignBottom="@+id/imageView3"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignStart="@+id/textView5" />

    </RelativeLayout>
</FrameLayout>
