<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="partyhelper.com.xpoliem.myapplication.CreateEventFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="700dp" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.xpoliem.party_helper.CreateEventActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/TextViewEvent"
            android:id="@+id/textErr"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/edtName"
            android:ems="10"
            android:id="@+id/edtName"
            android:layout_below="@+id/textErr"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imgViewEvent"
            android:layout_alignBottom="@+id/timePicker"
            android:layout_gravity="top"
            android:layout_toRightOf="@+id/timePicker"
            android:layout_toEndOf="@+id/timePicker"
            android:layout_below="@+id/edtName"
            android:src="@drawable/ic_launcher"
            android:layout_marginBottom="15dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnImage"
            android:id="@+id/GetImage"
            style="@style/Buttons"
            android:onClick="ImageDisplay"
            android:layout_above="@+id/btnPlace"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CreateBtn"
            android:id="@+id/btnCreate"
            style="@style/Buttons"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/btnPlace"
            android:layout_alignStart="@+id/btnPlace" />

        <TimePicker
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/timePicker"
            android:layout_below="@+id/edtName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <DatePicker
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:id="@+id/datePicker"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            style="@style/Buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pick A Place"
            android:id="@+id/btnPlace"
            android:layout_above="@+id/btnCreate"
            android:layout_alignLeft="@+id/GetImage"
            android:layout_alignStart="@+id/GetImage" />

    </RelativeLayout>

</FrameLayout>
    </ScrollView>


