<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="partyhelper.com.xpoliem.myapplication.ProfilePicFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.xpoliem.party_helper.ProfilePic">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSelectPP"
            android:id="@+id/btnSelect"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            style="@style/Buttons"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uploadBtn"
            android:id="@+id/btnUpload"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="138dp"
            style="@style/Buttons"/>

        <ImageView
            android:layout_width="226dp"
            android:layout_height="226dp"
            android:id="@+id/imgView"

            android:padding="1dp"
            android:layout_above="@+id/btnUpload"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageView6"
            android:src="@drawable/konnect"
            android:layout_gravity="left|top"
            android:layout_marginTop="67dp"
            android:layout_alignTop="@+id/btnUpload"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/konnectString"
            android:id="@+id/textView15"
            android:textSize="16dp"
            android:textColor="#fa0084f8"
            android:layout_gravity="center_horizontal|top"
            android:layout_alignBottom="@+id/imageView6"
            android:layout_alignRight="@+id/btnUpload"
            android:layout_alignEnd="@+id/btnUpload" />

    </RelativeLayout>

</FrameLayout>
