<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="partyhelper.com.xpoliem.myapplication.LoginFragment">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:hint="Username..."
        android:id="@+id/edtTxtUsername"
        android:layout_below="@+id/textError"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="76dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_horizontal|top" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="Password..."
        android:id="@+id/edtTxtPassword"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewLogin"
        android:id="@+id/textError"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|top"
        android:autoText="false"
        android:textAlignment="center" />

    <Button
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:text="@string/LoginButton"
        android:id="@+id/btnLogin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick"
        android:layout_gravity="center"
        style="@style/Buttons"
        android:layout_marginTop="80dp" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/imageView4"
        android:src="@drawable/konnect"
        android:layout_below="@+id/textError"
        android:layout_toLeftOf="@+id/textView10"
        android:layout_toStartOf="@+id/textView10"
        android:layout_gravity="left|top"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/konnectString"
        android:id="@+id/textView12"
        android:textSize="18dp"
        android:textColor="#fa0084f8"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp" />

</FrameLayout>
